# neural-network

./: README.md  demo.ipynb  demo_mnist.ipynb  demo_moons.ipynb  pyproject.toml
documentation/: main.tex
network/: __init__.py  _nn.py
test_data/: demo_coursera.ipynb
tests/: test_network.py
