[tool.poetry]
name = "neural_network"
version = "0.0.0"
description = "Simple neural network with backpropagation."
authors = ["Maximilian Schebek"]

[tool.poetry.dependencies]
python = "^3.8"
micrograd = "^0.1.0"
matplotlib = "^3.4.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pylint = "^2.11.1"
pytest = "^6.2.5"
ipython = "^7.29.0"
ipykernel = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
